# input-leap

./: .appveyor.yml  .gitignore  .gitmodules  BUILD.md  Build.properties  CMakeLists.txt  LICENSE  README.md  RELEASING.md  azure-pipelines.yml  barrier.spec  build_installer.bat  build_rpm.sh  clean_build.bat  clean_build.ps1  clean_build.sh  input-leap.spec  macos_environment.sh  osx_environment.sh  prepare_spec_file.sh  towncrier.toml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  MSWindowsClientTaskBarReceiver.cpp  MSWindowsClientTaskBarReceiver.h  barrierc.cpp  input-leapc.cpp  input-leapc.exe.manifest  input-leapc.rc  input-leapc.rc.in  resource.h
src/cmd/: CMakeLists.txt
src/cmd/barrierc/: CMakeLists.txt  FallbackClientTaskBarReceiver.cpp  FallbackClientTaskBarReceiver.h  MSWindowsClientTaskBarReceiver.cpp  MSWindowsClientTaskBarReceiver.h  OSXClientTaskBarReceiver.cpp  OSXClientTaskBarReceiver.h  XWindowsClientTaskBarReceiver.cpp  XWindowsClientTaskBarReceiver.h  barrierc.cpp  barrierc.rc  resource.h
src/cmd/barrierd/: CMakeLists.txt  barrierd.cpp  barrierd.rc
src/cmd/barriers/: CMakeLists.txt  FallbackServerTaskBarReceiver.cpp  FallbackServerTaskBarReceiver.h  MSWindowsServerTaskBarReceiver.cpp  MSWindowsServerTaskBarReceiver.h  OSXServerTaskBarReceiver.cpp  OSXServerTaskBarReceiver.h  XWindowsServerTaskBarReceiver.cpp  XWindowsServerTaskBarReceiver.h  barriers.cpp  barriers.rc
src/daemon/: CMakeLists.txt  barrierd.cpp  barrierd.rc  input-leapd.rc  input-leapd.rc.in
src/gui/: CMakeLists.txt  gui.ts
src/gui/res/: Barrier.qrc  InputLeap.qrc
src/gui/src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AboutDialogBase.ui  Action.cpp  Action.h  ActionDialog.cpp  ActionDialog.h  ActionDialog.ui  ActionDialogBase.ui  AddClientDialog.cpp  AddClientDialog.h  AppConfig.cpp  AppConfig.h  AppConnectionState.h  AppLocale.cpp  AppLocale.h  BarrierLocale.cpp  BarrierLocale.h  BaseConfig.cpp  BaseConfig.h  CommandProcess.cpp  CommandProcess.h  DataDownloader.cpp  DataDownloader.h  DefaultInterfaceIP.h  DisplayIsValid.cpp  DisplayIsValid.h  ElevateMode.h  Fingerprint.cpp  FingerprintAcceptDialog.cpp  FingerprintAcceptDialog.h  Hotkey.cpp  Hotkey.h  HotkeyDialog.cpp  HotkeyDialog.h  Ipc.cpp  Ipc.h  IpcClient.cpp  IpcClient.h  (+65 more)
src/gui/test/: HotkeyTests.cpp  KeySequenceTests.cpp  Utils.h  main.cpp
src/lib/: CMakeLists.txt  config.h.in
src/lib/arch/: Arch.cpp  Arch.h  ArchConsoleStd.cpp  ArchConsoleStd.h  ArchDaemonNone.cpp  ArchDaemonNone.h  CMakeLists.txt  IArchConsole.h  IArchDaemon.h  IArchLog.h  IArchMultithread.cpp  IArchMultithread.h  IArchNetwork.h  IArchSleep.h  IArchString.cpp  IArchString.h  IArchSystem.h  IArchTaskBar.h  IArchTaskBarReceiver.h  IArchTime.h  XArch.h  multibyte.h
src/lib/barrier/: App.cpp  App.h  AppUtil.cpp  AppUtil.h  ArgParser.cpp  ArgParser.h  ArgsBase.cpp  ArgsBase.h  BarrierType.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ClientApp.cpp  ClientApp.h  ClientArgs.cpp  ClientArgs.h  ClientTaskBarReceiver.cpp  ClientTaskBarReceiver.h  Clipboard.cpp  Clipboard.h  ClipboardChunk.cpp  ClipboardChunk.h  DragInformation.cpp  DropHelper.cpp  DropHelper.h  FileChunk.cpp  FileChunk.h  HdmiSwitch.cpp  HdmiSwitch.h  IApp.h  IAppUtil.h  IClient.h  IClipboard.cpp  IClipboard.h  IKeyState.cpp  IKeyState.h  INode.h  IPlatformScreen.cpp  IPlatformScreen.h  IPrimaryScreen.cpp  (+37 more)
src/lib/base/: BitUtilities.h  CMakeLists.txt  ELevel.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  EventQueueTimer.h  EventTarget.cpp  EventTarget.h  EventTypes.cpp  EventTypes.h  FunctionEventJob.cpp  FunctionEventJob.h  Fwd.h  IEventJob.h  IEventQueue.h  IEventQueueBuffer.h  IJob.h  ILogOutputter.h  Log.cpp  Log.h  NonBlockingStream.cpp  NonBlockingStream.h  PriorityQueue.h  SimpleEventQueueBuffer.cpp  SimpleEventQueueBuffer.h  StdinListen.cpp  StdinListen.h  Stopwatch.cpp  Stopwatch.h  String.cpp  String.h  TMethodEventJob.h  Time.cpp  Time.h  Unicode.cpp  Unicode.h  UniquePtrContainer.h  XBase.cpp  (+4 more)
src/lib/client/: CMakeLists.txt  Client.cpp  Client.h  ServerProxy.cpp  ServerProxy.h
src/lib/common/: CMakeLists.txt  DataDirectories.h  DataDirectoriesCommon.cpp  DataDirectories_static.cpp  GitChecks.cpp  GitChecks.h  IInterface.h  PathUtilities.cpp  PathUtilities.h  Version.cpp  Version.cpp.in  Version.h  basic_types.h  common.h  stdbitset.h  stddeque.h  stdfstream.h  stdistream.h  stdlist.h  stdmap.h  stdostream.h  stdpost.h  stdpre.h  stdset.h  stdsstream.h  stdstring.h  stdvector.h
src/lib/inputleap/: App.cpp  App.h  AppRole.h  AppUtil.cpp  AppUtil.h  ArgParser.cpp  ArgParser.h  ArgsBase.cpp  ArgsBase.h  BarrierType.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ClientApp.cpp  ClientApp.h  ClientArgs.cpp  ClientArgs.h  ClientTaskBarReceiver.cpp  ClientTaskBarReceiver.h  Clipboard.cpp  Clipboard.h  ClipboardChunk.cpp  ClipboardChunk.h  DragInformation.cpp  DragInformation.h  DropHelper.cpp  DropHelper.h  Exceptions.cpp  Exceptions.h  FileChunk.cpp  FileChunk.h  Fwd.h  IApp.h  IAppUtil.h  IClient.h  IClipboard.cpp  IClipboard.h  IKeyState.cpp  IKeyState.h  INode.h  (+42 more)
src/lib/io/: CMakeLists.txt  IStream.h  StreamBuffer.cpp  StreamBuffer.h  StreamFilter.cpp  StreamFilter.h  XIO.cpp  XIO.h  filesystem.cpp  filesystem.h  fstream.cpp  fstream.h
src/lib/ipc/: CMakeLists.txt  Ipc.cpp  Ipc.h  IpcClient.cpp  IpcClient.h  IpcClientProxy.cpp  IpcClientProxy.h  IpcLogOutputter.cpp  IpcLogOutputter.h  IpcMessage.cpp  IpcMessage.h  IpcServer.cpp  IpcServer.h  IpcServerProxy.cpp  IpcServerProxy.h
src/lib/mt/: CMakeLists.txt  CondVar.cpp  CondVar.h  Lock.cpp  Lock.h  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  XMT.cpp  XMT.h  XThread.h
src/lib/net/: CMakeLists.txt  ConnectionSecurityLevel.h  FingerprintData.cpp  FingerprintData.h  FingerprintDatabase.cpp  FingerprintDatabase.h  FingerprintType.h  Fwd.h  IDataSocket.cpp  IDataSocket.h  IListenSocket.h  (+22 more)
src/rust/: CMakeLists.txt  Cargo.toml  build.rs
src/server/: CMakeLists.txt  MSWindowsServerTaskBarReceiver.cpp  MSWindowsServerTaskBarReceiver.h  input-leaps.cpp  input-leaps.exe.manifest  input-leaps.rc  input-leaps.rc.in  resource.h
(+550 files in other folders)
